18 June 2005 Andreas Fabri
- Moved code from Kernel_class_2 to the functors

12 June 2005 Sylvain Pion
- Add function operator in Construct_{min|max}_vertex_[23] taking
  Segment_[23].

30 May 2005 Sylvain Pion
- Handle_for : add unique() and use_count() (as in tr1::shared_ptr).

28 May 2005 Sylvain Pion
- More on Kernel/Dimension_utils.h.

27 May 2005 Sylvain Pion
- Add more tools to abstract away dimension in Kernel/Dimension_utils.h.

26 May 2005 Sylvain Pion
- Add Dimension<> tool to get the static dimension of kernel objects.

19 May 2005 Sylvain Pion
- Add centroid(Triangle_[23]) and centroid(Tetrahedron_3).

11 May 2005 Sylvain Pion
- New predicates : orientation(3 Vector_3) and orientation(2 Vector_2).

26 April 2005 Sylvain Pion
- Fix rational_rotation bug (by Daniel).

26 March 2005 Sylvain Pion
- Handle_for : remove "optimization" of default ctor.
  It's painful to use, and is there really a need to optimize default ctors ?

8 March 2005 Sylvain Pion
- Add do_intersect(Triangle_3, Tetrahedron_3) by Nico Kruithof.

6 February 2005 Sylvain Pion
- Rewrite known_bit_size_integers.h using MPL to help portability.

============================= CGAL 3.1 ===========================

2 December 2004 Sylvain Pion
- Doc : clarify that RT/FT are coming from Kernel::.

20 November 2004 Sylvain Pion
- x86_64 porting.

5 November 2004 Sylvain Pion
- Fix alphabetical order in the concepts list.

20 September 2004 Sylvain Pion
- Exact_predicates_exact_constructions_kernel : use Filtered_kernel on top.
- test/Filtered_cartesian : test Exact_predicates_exact_constructions_kernel.

17 September 2004 Sylvain Pion
- #include <CGAL/Origin.h> instead of declaring types.

14 September 2004 Sylvain Pion
- Exact_predicates_inexact_constructions_kernel : now uses Filtered_kernel
  instead of Filtered_exact (benefits from static filters).
- Filtered_kernel_without_type_equality renamed to Filtered_kernel_adaptor.
- More global functions call the functors.
