@@ -49,10 +49,9 @@ templates with a parameter that allows the user to choose the
 representation of the kernel objects. A type that is used as an
 argument for this parameter must fulfill certain requirements on
 syntax and semantics. The list of requirements defines an abstract
-kernel concept. For all kernel objects
-\ccHtmlNoLinksFrom{\ccc{Object}}, the types
-\ccHtmlNoLinksFrom{\ccc{CGAL::Object<Kernel>}} and 
-\ccHtmlNoLinksFrom{\ccc{Kernel::Object}} are identical.
+kernel concept. For all kernel objects types, the types
+\ccHtmlNoLinksFrom{\ccc{CGAL::Type<Kernel>}} and 
+\ccHtmlNoLinksFrom{\ccc{Kernel::Type}} are identical.
 
 CGAL offers four families of concrete models for the concept Kernel,
 two based on the \ccHtmlNoLinksFrom{Cartesian} representation of
