@@ -61,10 +61,8 @@
 \subsection*{Classes for dD Geometry}
 \ccRefIdfierPage{CGAL::Point_d<Kernel>} \\
 
-\subsection*{Polymorphic Return Type Class and Functions}
+\subsection*{Polymorphic Return Type Class}
 
-\ccRefIdfierPage{CGAL::assign} \\
-\ccRefIdfierPage{CGAL::make_object} \\
 \ccRefIdfierPage{CGAL::Object} \\
 
 \subsection*{Constants and Enumerations}
