@@ -1,16 +1,0 @@
-\begin{ccRefFunction}{assign}
-\ccTexHtml{\ccSetThreeColumns{Orientation}{}{\hspace*{8.5cm}}}{}
-
-\ccInclude{CGAL/Object.h}
-
-\ccFunctionTemplate{T}{template <class T> bool assign(T& c, const Object& o);}
-       {assigns \ccStyle{o} to \ccStyle{c} if \ccStyle{o}
-        was constructed from an object of type \ccStyle{T}.
-        Returns \ccc{true}, if the assignment was possible.}
-
-\ccSeeAlso
-\ccRefIdfierPage{CGAL::intersection} \\
-\ccRefIdfierPage{CGAL::make_object} \\
-
-\end{ccRefFunction}
-
