@@ -103,8 +103,6 @@ in the kernel.
 
 \input{Kernel_23_ref/Object.tex}
 \gdef\ccRefPageBreak{\ccTrue}
-\input{Kernel_23_ref/assign.tex}
-\input{Kernel_23_ref/make_object.tex}
 
 \clearpage
 \section{Constants and Enumerations}
