@@ -1,11 +1,0 @@
-\begin{ccRefFunction}{make_object}
-\ccInclude{CGAL/Object.h}
-
-\ccFunctionTemplate{T}{template <class T> Object make_object(const T &t);}
-{Creates an object that contains \ccStyle{t}.}
-
-\ccSeeAlso
-\ccRefIdfierPage{CGAL::assign} \\
-
-\end{ccRefFunction}
-
