@@ -1,3 +1,7 @@
+9 July 2005 Sylvain Pion
+- Object : add object_cast<>() and .type().
+- Doc : merge assign.tex and make_object.tex in Object.tex.
+
 18 June 2005 Andreas Fabri
 - Moved code from Kernel_class_2 to the functors
 
